refactor: Upgrade SpringBoot to 3.3